# bodyfat-prediction-service

./: .gitignore  Makefile  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
artifacts/models/: model.json  model.json.dvc
experiments/: metrics.json
experiments/plots/metrics/: Train R².tsv  Validation R².tsv  r2_train.tsv  r2_val.tsv
notebooks/: bodyfat-prediction-service.ipynb  eda.ipynb
src/: app.py  config.py
src/data/: dataset.py  dataset_builder.py
src/features/: feature_builder.py
src/models/: trainer.py
