[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["ncheymbamalu <nchey.learnings@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^3.48.4"
dvc-gs = "^3.0.1"
dvclive = "^3.45.0"
fastapi = "^0.110.0"
numpy = "^1.26.4"
omegaconf = "^2.3.0"
pandas = "^2.2.1"
pydantic = "^2.6.4"
pygit2 = "^1.14.1"
python-dotenv = "^1.0.1"
scikit-learn = "^1.4.1.post1"
uvicorn = "^0.29.0"
xgboost = "2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
fastparquet = "^2024.2.0"
Flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
jupyterlab = "^4.1.5"
matplotlib = "^3.8.3"
mypy = "^1.10.0"
pyarrow = "^15.0.1"
pylint = "^3.2.2"
pytest = "^8.2.1"
ruff = "^0.3.2"
seaborn = "^0.13.2"
tqdm = "^4.66.2"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
import-order-style = ["pep8"]
application_import_names = ["src"]
exclude = [".git", "__pycache__"]
extend-ignore = ["E501", "W503", "W504", "E203", "I201", "I202"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
indent = 4
lines_between_types = 1
known_first_party = ["src"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
ignore_missing_imports = true
install_types = true
non_interactive = true
follow_imports = "silent"
no_strict_optional = true
warn_redundant_casts = false
warn_unused_ignores = true
warn_unused_configs = true
warn_return_any = true
warn_no_return = true
warn_incomplete_stub = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
strict_optional = true
verbosity = 0

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
